--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bom apetite</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+    />
+    <title>Bom apetite</title>
+  </head>
+  <body>
+    <header class="navbar navbar-expand-lg stickt-top">
+      <div class="container">
+        <h1 class="navbar-brand">Bom Apetite</h1>
+        <nav>
+          <ul class="nav nav-pills">
+            <li class="nav-item">
+              <a href="" class="nav-link active">Sobre o restaurante</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Eventos</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Nosso cardápio</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Fale conosco</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js
+  "></script>
+  </body>
 </html>
