--- a/index.html
+++ b/index.html
@@ -8,34 +8,50 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="main.css" />
     <title>Bom apetite</title>
   </head>
+
   <body>
-    <header class="navbar navbar-expand-lg stickt-top">
+    <header class="navbar navbar-expand-lg stickt-top p-4">
       <div class="container">
         <h1 class="navbar-brand">Bom Apetite</h1>
-        <nav>
-          <ul class="nav nav-pills">
-            <li class="nav-item">
-              <a href="" class="nav-link active">Sobre o restaurante</a>
+        <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-navegacao">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <nav class="navbar-collapse collapse justify-content-end" id="menu-navegacao">
+          <ul class="nav nav-pills d-block d-md-flex">
+            <li class="nav-item fw-bold">
+              <a href="" class="nav-link active">
+                <i class="bi bi-house-door me-1"></i>
+                Sobre o restaurante</a>
             </li>
-            <li class="nav-item">
-              <a href="" class="nav-link">Eventos</a>
+            <li class="nav-item fw-bold">
+              <a href="" class="nav-link">
+                <i class="bi bi-calendar-check me-1"></i>
+                Eventos</a>
             </li>
-            <li class="nav-item">
-              <a href="" class="nav-link">Nosso cardápio</a>
+            <li class="nav-item fw-bold">
+              <a href="" class="nav-link">
+                <i class="bi bi-card-text me-1"></i>
+                Nosso cardápio</a>
             </li>
-            <li class="nav-item">
-              <a href="" class="nav-link">Fale conosco</a>
+            <li class="nav-item fw-bold">
+              <a href="" class="nav-link">
+                <i class="bi bi-chat-left-text me-1"></i>
+                Fale conosco</a>
             </li>
           </ul>
         </nav>
       </div>
     </header>
-
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js
   "></script>
