--- a/index.html
+++ b/index.html
@@ -394,7 +394,43 @@
                                 </div>                                   
                             </div>
                         </div>
-    </div>
+    </section>
+                    
+          <section id="fale-conosco">
+            <div class="container">
+              <div class="row">
+                <h2 class="section-tittle text-center">Fale <span>conosco</span></h2>
+              </div>
+              <div class="row">
+                <div class="col-md-7">
+                  <form>
+                    <div>
+                      <label for="nome" class="form-label">Seu nome</label>
+                      <input type="text" id="nome" class="form-control">
+                    </div>
+                    <div>
+                      <label for="email" class="form-label">Seu e-mail</label>
+                      <input type="email" id="email" class="form-control">
+                    </div>
+                    <div>
+                      <label for="telefone" class="form-label">Seu telefone (opcional)</label>
+                      <input type="tel" id="telefone" class="form-control">
+                    </div>
+                    <div>
+                      <label for="mensagem" class="form-label">Sua mensagem</label>
+                      <textarea id="mensagem" class="form-control"></textarea>
+                      <button type="submit" class="btn">Enviar</button>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </section>
+  
+  
+  
+  
+        </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js
   "></script>
   </body>
