--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               >
             </li>
             <li class="nav-item fw-bold">
-              <a href="" class="nav-link">
+              <a href="#fale-conosco" class="nav-link">
                 <i class="bi bi-chat-left-text me-1"></i>
                 Fale conosco</a
               >
@@ -396,7 +396,7 @@
                         </div>
     </section>
                     
-          <section id="fale-conosco">
+          <section id="fale-conosco" class="pt-5 pb-5">
             <div class="container">
               <div class="row">
                 <h2 class="section-tittle text-center">Fale <span>conosco</span></h2>
@@ -404,30 +404,60 @@
               <div class="row">
                 <div class="col-md-7">
                   <form>
-                    <div>
-                      <label for="nome" class="form-label">Seu nome</label>
-                      <input type="text" id="nome" class="form-control">
+                    <div class="mb-3">
+                      <label for="nome" class="form-label fw-bold text-colored">Seu nome</label>
+                      <input type="text" id="nome" class="form-control" required>
                     </div>
-                    <div>
-                      <label for="email" class="form-label">Seu e-mail</label>
-                      <input type="email" id="email" class="form-control">
+                    <div class="mb-3">
+                      <label for="email" class="form-label fw-bold text-colored">Seu e-mail</label>
+                      <input type="email" id="email" class="form-control" required>
                     </div>
-                    <div>
-                      <label for="telefone" class="form-label">Seu telefone (opcional)</label>
+                    <div class="mb-3">
+                      <label for="telefone" class="form-label fw-bold text-colored">Seu telefone (opcional)</label>
                       <input type="tel" id="telefone" class="form-control">
                     </div>
-                    <div>
-                      <label for="mensagem" class="form-label">Sua mensagem</label>
-                      <textarea id="mensagem" class="form-control"></textarea>
-                      <button type="submit" class="btn">Enviar</button>
+                    <div class="mb-3">
+                      <label for="mensagem" class="form-label fw-bold text-colored">Sua mensagem</label>
+                      <textarea id="mensagem" class="form-control" required></textarea>
                     </div>
+                      <button type="submit" class="btn fw-bold">Enviar</button>
                   </form>
+                </div>
+                <div class="col-md-5">
+                  <div class="row">
+                    <h3 class="section-tittle fs-4 text-colored">
+                      <i class="bi bi-hand-thumbs-up-fill"></i>
+                      Redes sociais</h3>
+                    <ul class="social-links">
+                      <li class="fs-5">
+                        <a href="#">
+                          <i class="bi bi-facebook text-colored"></i>
+                        </a>
+                      </li>
+                      <li class="fs-5 ms-1 me-1">
+                        <a href="#">
+                          <i class="bi bi-instagram text-colored"></i>
+                        </a>
+                      </li>
+                      <li class="fs-5">
+                        <a href="#">
+                          <i class="bi bi-whatsapp text-colored"></i>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="row mt-4">
+                    <h3 class="section-tittle fs-4 text-colored">
+                      <i class="bi bi-cursor-fill"></i>
+                      Endereço</h3>
+                    <p>Rua Teste Exemplo n 145, Bairro Bootstrap - São Paulo - SP</p>
+                  </div>
                 </div>
               </div>
             </div>
           </section>
-  
-  
+          
+
   
   
         </div>
