--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
     </header>
 
-    <div data-bs-spy="scroll" data-bs-target="cabecalho">
+    <div data-bs-spy="scroll" data-bs-target="cabecalho" data-bs-smooth-scroll="true">
       <section id="sobre-o-restaurante">
         <div class="carousel slide" data-bs-ride="carousel" id="carousel">
           <div class="carousel-inner">
@@ -127,7 +127,7 @@
                   alt=""
                 />
               </div>
-              <div class="col-md-7">
+              <div class="col-md-7 mt-3 mt-md-0">
                 <h2 class="section-tittle">Sobre <span>o restaurante</span></h2>
                 <p>
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
@@ -402,7 +402,7 @@
                 <h2 class="section-tittle text-center">Fale <span>conosco</span></h2>
               </div>
               <div class="row">
-                <div class="col-md-7">
+                <div class="col-md-7 mb-5">
                   <form>
                     <div class="mb-3">
                       <label for="nome" class="form-label fw-bold text-colored">Seu nome</label>
